# kidhub-backend

./: .gitignore  pyproject.toml
.certs/: localhost-cert.pem  localhost-key.pem
apps/lets_learn/: admin.py  apps.py  mixins.py  models.py  serializers.py  services.py  urls.py  views.py
apps/lets_learn/migrations/: 0001_initial.py  0002_rename_content_learnitem_content_name_and_more.py  0003_learnitem_lets_learn__categor_b77cf9_idx.py  0004_category_enum.py  0005_category_config.py  0006_learnitem_object_color.py  0007_add_slugs.py  0008_update_category_names.py  0009_alter_categoryconfig_category_and_more.py  0010_use_category_fk.py  0011_categoryconfig_id.py  0012_add_multilanguage_fields.py
apps/lets_learn/templates/admin/lets_learn/categoryconfig/: change_list.html  import_xlsx.html
apps/lets_learn/templates/admin/lets_learn/learnitem/: change_list.html
config/: settings.py  urls.py  wsgi.py
web/: README.md  next.config.ts  package-lock.json  package.json
web/app/: error.tsx  loading.tsx  page.tsx
web/app/category/[id]/: loading.tsx  page.tsx
web/lib/: api.ts
